Spacing fix

--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@
 * {
     text-align: center;
     font-family: monospace;
-    margin: 10% 10%;
+    margin: 0 10%;
     font-size: 4vw;
 }
 
@@ -22,7 +22,8 @@ body{
     display:flex;
     flex-direction: column;
     height: 100vh;
-    justify-content: space-between;
+    justify-content: space-around;
+    padding: 20% 0;
 }
 
 button, textarea {
